day2 of ansible

--- a/inventory.ini
+++ b/inventory.ini
@@ -5,6 +5,6 @@
 localhost
 
 [local:vars]
-SERVER_NAME: web01
-ENVIRONMENT: production
-OWNER: DevOps Team
+SERVER_NAME= web01
+ENVIRONMENT= production
+OWNER= DevOps Team
