--- a/7-vars-inventory.yaml
+++ b/7-vars-inventory.yaml
@@ -1,6 +1,6 @@
 - name: variable sthrough inventory
-  hosts: local
-  connection: local
+  hosts: frontend
+ # connection: local 
   tasks:
   - name: printing variables from inventory
     ansible.builtin.debug:
