--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [frontend]
-44.211.217.78
+172.31.90.121 SERVER_NAME= web01 ENVIRONMENT= production OWNER= DevOps Team ansible_username=ec2-user ansible_password=DevOps321
 
 [local]
 localhost
