--- a/inventory.ini
+++ b/inventory.ini
@@ -1,10 +1,10 @@
 [frontend]
-172.31.90.121 SERVER_NAME= web01 ENVIRONMENT= production OWNER= DevOps Team ansible_username=ec2-user ansible_password=DevOps321
+172.31.90.121 SERVER_NAME=web01 ENVIRONMENT=production OWNER="DevOps Team" ansible_username=ec2-user ansible_password=DevOps321
 
 [local]
 localhost
 
 [local:vars]
-SERVER_NAME= web01
-ENVIRONMENT= production
-OWNER= DevOps Team
+SERVER_NAME=web01
+ENVIRONMENT=production
+OWNER="DevOps Team"
