day2 of ansible

--- a/8-vars-inventory.yaml
+++ b/8-vars-inventory.yaml
@@ -1,6 +1,5 @@
 - name: variable sthrough inventory
-  hosts: local
-  connection: local 
+  hosts: frontend
   tasks:
   - name: printing variables from inventory
     ansible.builtin.debug:
