--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -10,7 +10,11 @@
     prompt: plz enter ther greeting
   tasks:
   - name: print the greeting
-    vars:
-      GREETING: "hellow from task"
+    #vars:
+     # GREETING: "hellow from task"
     ansible.builtin.debug:
       msg: "{{ GREETING }}"
+
+      #1: from arguments
+      #2: task level
+      #3: 
