--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -1,8 +1,8 @@
 - name: variables preference
   hosts: local
   connection: local
-  vars:
-    GREETING: "hellow from play"
+  #vars:
+  # GREETING: "hellow from play"
   #vars_files:
   #- infovars.yaml
   # vars_prompt:
@@ -20,4 +20,5 @@
       #2: task level
       #3: from files
       #4: from prompt
-      #5:
+      #5: play level
+      #6: 
