--- a/1-playbook.yaml
+++ b/1-playbook.yaml
@@ -1,6 +1,6 @@
 - name: download the nginx server
   hosts: frontend
-  become: true
+  become: truew
   tasks: #list of tasks
   - name: install the nginx
     ansible.builtin.package:
