--- a/14-conditions.yaml
+++ b/14-conditions.yaml
@@ -1,6 +1,7 @@
 - name: ansible facts
   hosts: local
   connection: local
+  become: yes
   tasks:
   - name: install nginx if redhat
     ansible.builtin.dnf:
