--- a/17-loops.yaml
+++ b/17-loops.yaml
@@ -9,5 +9,5 @@
       state: "{{ item.state }}"
     loop:
     - {name: 'nginx', state: 'present'}
-    - {name: 'mysql', state: 'absent'}
+    - {name: 'mysql', state: 'present'}
     - {name: 'zip', state: 'absent'}
