day 1 of automating project with ansible roles

--- a/20-install-nginx.yaml
+++ b/20-install-nginx.yaml
@@ -4,11 +4,11 @@
   tasks: 
   - name: install nginx
     ansible.builtin.dnf:
-      - name: nginx
+        name: nginx
         state: present
 
   - name: enable nginx
     ansible.builtin.service:
-      - name: nginx
+        name: nginx
         state: started
         enabled: yes
