day 1 of automating project with ansible roles

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [default]
 forks= 6
-inventory= dynamic_inv.aws_ec2.yaml
+#inventory= dynamic_inv.aws_ec2.yaml
+inventory= inventory.ini
 remote_user= ec2-user
