day 1 of automating project with ansible roles

--- a/21-infra-ec2.yaml
+++ b/21-infra-ec2.yaml
@@ -3,7 +3,7 @@
   connection: local
   vars:
     instances:
-    - mysql
+    - mysqlll
     - backend
     - frontend
     sg_id: sg-0142341bd063dfed3
